# ollama-queue

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
client/: pyproject.toml
client/ollama_queue/: __init__.py  client.py
client/tests/: test_client_e2e.py  test_client_unit.py
server/: config.py  database.py  main.py  models.py  queue.py  router.py  wol.py  worker.py
tests/e2e/: test_full_flow.py
tests/unit/: test_config.py  test_database.py  test_get_status.py  test_models.py  test_post_queue.py  test_queue.py  test_wol.py  test_worker.py
