[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[project]
name = "ollama-queue"
version = "0.11.0"
description = "Queue server and client for Ollama inference requests"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "ruff>=0.4",
    "pytest>=8",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
