[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ollama_queue*"]

[project]
name = "ollama-queue-client"
version = "0.1.0"
description = "Blocking Python client for the ollama-queue server"
requires-python = ">=3.11"
dependencies = []
